# schook

./: .atm.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  USAGE.md  pyproject.toml
.claude/agents/: arch-hook.md  publisher.md  quality-mgr.md  rust-code-reviewer.md  rust-qa-agent.md  schook-qa-agent.md  scrum-master.md
.claude/skills/codex-orchestration/: SKILL.md  dev-template.xml.j2  qa-template.xml.j2
.claude/skills/codex-orchestration/examples/: dev-template-vars.json  qa-template-vars.json
.claude/skills/hook-schema-drift/: SKILL.md
.claude/skills/sprint-report/: SKILL.md  report-detailed.md.j2
.claude/skills/team-lead/: SKILL.md  backup-and-restore-team.md
.github/workflows/: ci.yml  release-preflight.yml  release.yml
crates/sc-hooks-cli/: Cargo.toml
crates/sc-hooks-cli/src/: async_bucket.rs  audit.rs  config.rs  dispatch.rs  errors.rs  events.rs  fire.rs  handlers.rs  install.rs  main.rs  metadata.rs  observability.rs  resolution.rs  session.rs  test_support.rs  testing.rs
crates/sc-hooks-cli/tests/: compliance_host.rs  long_running_contract.rs  observability_contract.rs  runtime_layout_example.rs  shims.rs
crates/sc-hooks-core/: Cargo.toml
crates/sc-hooks-core/src/: conditions.rs  dispatch.rs  errors.rs  events.rs  exit_codes.rs  lib.rs  manifest.rs  session.rs  tools.rs  validation.rs
crates/sc-hooks-sdk/: Cargo.toml
crates/sc-hooks-sdk/src/: lib.rs  manifest.rs  result.rs  runner.rs  traits.rs
crates/sc-hooks-test/: Cargo.toml
crates/sc-hooks-test/src/: compliance.rs  fixtures.rs  lib.rs  worktree_hooks.rs
docs/: architecture.md  cross-platform-guidelines.md  doc-governance.md  implementation-gaps.md  logging-contract.md  observability-contract.md  observability-soak-runbook.md  phase-bc-hook-runtime-design.md  phase-observability-plan.md  plan-cross-provider-hooks.md  plugin-plan-s9.md  project-plan.md  protocol-contract.md  requirements.md  sc-log-phase-end-prr-1-findings.md  sc-log-prr-1-findings.md  sc-observability-integration-audit.md  traceability.md
docs/archive/: implementation-gaps.md  plugin-plan-s9.md
docs/hook-api/: atm-hook-extension.md  claude-hook-api.md  codex-followon-plan.md  codex-hook-api.md  cursor-agent-hook-api.md  cursor-followon-plan.md  gemini-followon-plan.md  gemini-hook-api.md
docs/sc-hooks-cli/: architecture.md  requirements.md
docs/sc-hooks-core/: architecture.md  requirements.md
docs/sc-hooks-sdk/: architecture.md  requirements.md
examples/runtime-layout/: README.md
examples/runtime-layout/.sc-hooks/: config.toml
examples/runtime-layout/.sc-hooks/plugins/: guard-paths
plugins/agent-session-foundation/: Cargo.toml
plugins/agent-session-foundation/src/: lib.rs  logging.rs  main.rs  payloads.rs  state.rs
plugins/agent-session-foundation/tests/: session_foundation.rs
plugins/agent-spawn-gates/: Cargo.toml
plugins/agent-spawn-gates/src/: lib.rs  main.rs
plugins/atm-bash-identity/: Cargo.toml
plugins/atm-bash-identity/src/: lib.rs  main.rs
plugins/atm-bash-identity/tests/: identity_file.rs
plugins/atm-extension/: Cargo.toml
plugins/atm-extension/src/: lib.rs  main.rs
plugins/atm-extension/tests/: atm_extension.rs
plugins/atm-session-lifecycle/: Cargo.toml
plugins/atm-session-lifecycle/src/: lib.rs  main.rs
plugins/atm-session-lifecycle/tests/: session_lifecycle.rs
plugins/atm-state-relay/: Cargo.toml
plugins/atm-state-relay/src/: lib.rs  main.rs
plugins/atm-state-relay/tests/: relay_events.rs
plugins/audit-logger/: Cargo.toml
plugins/audit-logger/src/: main.rs
plugins/conditional-source/: Cargo.toml
plugins/conditional-source/src/: main.rs
plugins/event-relay/: Cargo.toml
plugins/event-relay/src/: main.rs
plugins/gate-agent-spawns/: Cargo.toml
plugins/gate-agent-spawns/src/: lib.rs  main.rs
plugins/gate-agent-spawns/tests/: spawn_gate.rs
plugins/guard-paths/: Cargo.toml
plugins/guard-paths/src/: main.rs
plugins/identity-state/: Cargo.toml
plugins/identity-state/src/: main.rs
plugins/notify/: Cargo.toml
plugins/notify/src/: main.rs
plugins/policy-enforcer/: Cargo.toml
plugins/policy-enforcer/src/: main.rs
plugins/save-context/: Cargo.toml
plugins/save-context/src/: main.rs
plugins/template-source/: Cargo.toml
plugins/template-source/src/: main.rs
plugins/tool-output-gates/: Cargo.toml
plugins/tool-output-gates/src/: lib.rs  main.rs
release/: publish-artifacts.toml
sc-hooks-cli/: Cargo.toml
sc-hooks-cli/src/: audit.rs  config.rs  dispatch.rs  errors.rs  events.rs  exit_codes.rs  fire.rs  handlers.rs  install.rs  logging.rs  main.rs  metadata.rs  observability.rs  resolution.rs  session.rs  test_support.rs  testing.rs  timeout.rs
sc-hooks-cli/src/builtins/: log.rs
sc-hooks-cli/tests/: compliance_host.rs  long_running_contract.rs  observability_contract.rs  runtime_layout_example.rs  shims.rs
sc-hooks-core/: Cargo.toml
sc-hooks-core/src/: conditions.rs  context.rs  dispatch.rs  errors.rs  events.rs  exit_codes.rs  lib.rs  manifest.rs  results.rs  session.rs  storage.rs  tools.rs  validation.rs
sc-hooks-sdk/: Cargo.toml
sc-hooks-sdk/src/: conditions.rs  lib.rs  manifest.rs  result.rs  runner.rs  traits.rs
sc-hooks-test/: Cargo.toml
sc-hooks-test/src/: compliance.rs  fixtures.rs  lib.rs  worktree_hooks.rs
scripts/: check-req-ids.sh  release_artifacts.py  release_gate.sh  verify-claude-hook-api.py
shims/: codex-shim.sh  gemini-shim.sh
skills/sprint-report/: report.md.j2
test-harness/hooks/: README.md  pytest.ini  run-schema-drift.py
test-harness/hooks/claude/: README.md  schema_drift.py
test-harness/hooks/claude/captures/: README.md
test-harness/hooks/claude/fixtures/: README.md
test-harness/hooks/codex/: README.md
test-harness/hooks/common/: README.md
test-harness/hooks/cursor-agent/: README.md
test-harness/hooks/gemini/: README.md
test-harness/hooks/scripts/: run-capture.sh
test_harness/: __init__.py
test_harness/hooks/: __init__.py  paths.py  run_schema_drift.py
test_harness/hooks/claude/: __init__.py  schema_drift.py
(+163 files in other folders)
