[workspace]
members = [
  "crates/sc-hooks-cli",
  "crates/sc-hooks-core",
  "crates/sc-hooks-sdk",
  "crates/sc-hooks-test",
  "plugins/agent-session-foundation",
  "plugins/agent-spawn-gates",
  "plugins/atm-extension",
  "plugins/audit-logger",
  "plugins/conditional-source",
  "plugins/event-relay",
  "plugins/guard-paths",
  "plugins/identity-state",
  "plugins/notify",
  "plugins/policy-enforcer",
  "plugins/save-context",
  "plugins/template-source",
  "plugins/tool-output-gates",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94.1"
version = "0.1.0"
