[workspace]
members = [
  "crates/sc-hooks-cli",
  "crates/sc-hooks-core",
  "crates/sc-hooks-sdk",
  "crates/sc-hooks-test",
  "plugins/agent-session-foundation",
  "plugins/agent-spawn-gates",
  "plugins/atm-extension",
  "plugins/audit-logger",
  "plugins/conditional-source",
  "plugins/event-relay",
  "plugins/guard-paths",
  "plugins/identity-state",
  "plugins/notify",
  "plugins/policy-enforcer",
  "plugins/save-context",
  "plugins/template-source",
  "plugins/tool-output-gates",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.94.1"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/randlee/schook"
homepage = "https://github.com/randlee/schook"
documentation = "https://github.com/randlee/schook/tree/develop/docs"
readme = "README.md"

[patch.crates-io]
sc-hooks-core = { path = "crates/sc-hooks-core" }
sc-hooks-sdk = { path = "crates/sc-hooks-sdk" }
sc-hooks-test = { path = "crates/sc-hooks-test" }
sc-observability = { path = "../sc-observability/crates/sc-observability" }
sc-observability-types = { path = "../sc-observability/crates/sc-observability-types" }
