[package]
name = "sc-hooks-core"
version.workspace = true
edition = "2024"

[dependencies]
dirs = "6.0.0"
sc-observability = { path = "../../../sc-observability/crates/sc-observability" }
sc-observability-types = { path = "../../../sc-observability/crates/sc-observability-types" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting"] }
