[package]
name = "sc-hooks-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "sc-hooks"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
fs2 = "0.4.3"
log = "0.4.29"
nix = { version = "0.30.1", features = ["signal", "process"] }
sc-observability = { path = "../../../sc-observability/crates/sc-observability" }
sc-observability-types = { path = "../../../sc-observability/crates/sc-observability-types" }
sc-hooks-core = { path = "../sc-hooks-core" }
sc-hooks-sdk = { path = "../sc-hooks-sdk" }
sc-hooks-test = { path = "../sc-hooks-test" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.12"
toml = "0.8.20"
