[package]
name = "sc-hooks-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "CLI host runtime, dispatch engine, and observability boundary for sc-hooks."

[[bin]]
name = "sc-hooks"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
log = "0.4.29"
nix = { version = "0.30.1", features = ["signal", "process"] }
sc-observability = "1.0.0"
sc-observability-types = "1.0.0"
sc-hooks-core = { version = "0.1.0", path = "../sc-hooks-core" }
sc-hooks-sdk = { version = "0.1.0", path = "../sc-hooks-sdk" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.12"
toml = "0.8.20"

[dev-dependencies]
sc-hooks-test = { version = "0.1.0", path = "../sc-hooks-test" }
