[package]
name = "sc-hooks-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Core types, state transitions, and persistence contracts for sc-hooks."

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
