[package]
name = "sc-hooks-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
sc-hooks-core = { path = "../sc-hooks-core" }
sc-hooks-sdk = { path = "../sc-hooks-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.26.0"
thiserror = "2.0.12"
