[package]
name = "sc-hooks-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Shared test fixtures and compliance helpers for sc-hooks."
publish = false

[dependencies]
sc-hooks-core = { version = "0.1.0", path = "../sc-hooks-core" }
sc-hooks-sdk = { version = "0.1.0", path = "../sc-hooks-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.26.0"
thiserror = "2.0.12"
