[package]
name = "agent-session-foundation"
version.workspace = true
edition = "2024"
description = "Runtime-implementation sc-hooks plugin source crate"

[dependencies]
log = "0.4.29"
sc-hooks-core = { path = "../../crates/sc-hooks-core" }
sc-hooks-sdk = { path = "../../crates/sc-hooks-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
