[package]
name = "agent-spawn-gates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Runtime-implementation sc-hooks plugin source crate"

[dependencies]
sc-hooks-core = { path = "../../crates/sc-hooks-core" }
sc-hooks-sdk = { path = "../../crates/sc-hooks-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.23.0"
