[package]
name = "atm-bash-identity"
version.workspace = true
edition = "2024"
publish = false
description = "Claude Bash hook plugin for ATM identity file management"

[dependencies]
atm-session-lifecycle = { path = "../atm-session-lifecycle" }
sc-hooks-core = { path = "../../sc-hooks-core" }
sc-hooks-sdk = { path = "../../sc-hooks-sdk" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
