[package]
name = "atm-extension"
version.workspace = true
edition = "2024"

[dependencies]
sc-hooks-core = { path = "../../sc-hooks-core" }
sc-hooks-sdk = { path = "../../sc-hooks-sdk" }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.23.0"
