[package]
name = "atm-extension"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime-implementation sc-hooks plugin source crate"
publish = false

[dependencies]
sc-hooks-core = { version = "0.1.0", path = "../../crates/sc-hooks-core" }
sc-hooks-sdk = { version = "0.1.0", path = "../../crates/sc-hooks-sdk" }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
toml = "0.8.20"
log = "0.4.28"

[dev-dependencies]
tempfile = "3.23.0"
