[package]
name = "gate-agent-spawns"
version.workspace = true
edition = "2024"
publish = false
description = "Claude Task spawn gate plugin"

[dependencies]
atm-session-lifecycle = { path = "../atm-session-lifecycle" }
regex = "1.12.2"
sc-hooks-core = { path = "../../sc-hooks-core" }
sc-hooks-sdk = { path = "../../sc-hooks-sdk" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.23.0"
