[package]
name = "tool-output-gates"
version.workspace = true
edition = "2024"

[dependencies]
sc-hooks-core = { path = "../../sc-hooks-core" }
sc-hooks-sdk = { path = "../../sc-hooks-sdk" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
